# image_stitching_demo

./: .gitignore  CMakeLists.txt  README.md
include/: CvUtils.cpp  CvUtils.h
src/: alpha_blending_stitching.cpp  laplace_blending_stitching.cpp  opencv_lib_stitching.cpp  poisson_blending_2.cpp  poisson_blending_stitching.cpp  sift_match.cpp
